tests/fixtures/errors/invalid_autonumber_bad_format_token.puml
@startuml
autonumber 10 2 "<b>[000]"
A -> B : bad
@enduml
